<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gara.voicy.MainActivity" >

    <TextView
        android:id="@+id/textServerIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_voicy" />

    <Button
        android:id="@+id/btnGetCommands"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textServerIP"
        android:layout_below="@+id/btnRecord"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="15dp"
        android:text="@string/get_commands" />

    <Button
        android:id="@+id/btnRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textServerIP"
        android:layout_below="@+id/textServerIP"
        android:layout_marginRight="17dp"
        android:layout_marginTop="55dp"
        android:text="@string/record" />

</RelativeLayout>